# csv_json_converter

./: LICENSE  README.md  convert_file.sh  pyproject.toml  setup.sh
src/data_file_type_converter/: convert_file.py  converter.py  csv_to_json.py  json_to_csv.py
tests/: test_csv_to_json.py
tests/test_data/: test_data.csv  test_data.json  test_data_02.csv  test_data_02.json
