[project]
name = "data-file-type-converter"
version = "0.1.0"
description = ""
authors = [
    {name = "Iveris",email = "iveris@no-reply.github.com"}
]
readme = "README.md"
virtualenvs.in-project = true
requires-python = ">=3.14"
dependencies = [
    "pytest (>=8.4)",
    "pandas (>=2.3)"
]

[pytest]
pythonpath = ["src"]

[tool.poetry]
packages = [{include = "data_file_type_converter", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
